--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -1,16 +1,8 @@
 .login {
-  display: flex;
-  background-color: white !important;
-  overflow-y: hidden;
+  overflow: hidden;
+  margin-top: -10%;
 }
-.login-left {
-  width: 100%;
-  height: 100vh;
-  background-color: rgb(236, 248, 252);
-}
-.login-right {
-  width: 100%;
-}
+
 .small-text {
   margin: 0 30%;
   font-size: 12px;
@@ -34,23 +26,4 @@
   position: relative;
   top: 10%;
 }
-.hero {
-  position: relative;
-  z-index: 1;
-  bottom: 40%;
-  left: 30%;
-}
-@media only screen and (max-width: 989px) {
-  .login-left{
-    width: 0%;
-  }
-  .login-left > img {
-    width: 0;
-  }
-  .login-img{
-    left: 40vw;
-    width: 20vw;
-  }
 
-
-}
