--- a/src/styles/Slider.scss
+++ b/src/styles/Slider.scss
@@ -31,6 +31,9 @@
         width: 45% !important;
         top: 13vw !important;
     }
+      .content h3{
+        margin-left: -4%;
+      }
   }
   .slide img {
     //non full screen
@@ -64,7 +67,6 @@
   
   .content > * {
     color: black;
-    margin-bottom: 1rem;
   }
   
   .current .content {
@@ -74,9 +76,9 @@
   }
   
   .arrow {
-    border: 2px solid gray;
+    border: 2px solid #165A9D;
     background-color: transparent;
-    color: gray;
+    color: #165A9D;
     cursor: pointer;
     height: 2rem;
     width: 2rem;
@@ -85,9 +87,9 @@
     z-index: 999;
   }
   .arrow:hover {
-    background-color: white;
-    border: 2px solid black;
-    color: black;
+    background-color: #165A9D;
+    border: 2px solid #165A9D;
+    color: white;
   }
   
   .next {
@@ -104,3 +106,25 @@
     background: white;
     width: 50%;
   }
+
+  .slider-button{
+    background-color: white;
+    border: 3px solid #165A9D;
+    padding: 5px 60px;
+    border-radius: 5px;
+    text-align:left;
+    margin-bottom: 5%;
+    background-color: #165A9D;
+    color: white;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    position:relative;
+    z-index: 10;
+
+}
+
+.slider-button:hover{
+    background-color: #1d74cc;
+    border: 3px solid #1d74cc;
+    cursor:pointer;
+}
