--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -3,13 +3,21 @@
 }
 .top-page-img {
   padding-right: 10%;
-  width: 7vw;
+  width: 8vw;
 }
 .navbar-container{
   margin-left: -10vw !important;
 }
 .nav-item.dropdown:hover .dropdown-menu {
   display: block;
+}
+.dropdown-menu{
+  border: 1px solid rgba(1,1,1,0.1);
+  box-shadow: 1px 5px 4px 2px rgba(1,1,1,0.2);
+  border-radius: 2px;
+}
+.navbar-dropdown-icon{
+  margin-right: 0.5vw;
 }
 .nav-dropdown-container{
   color:#165A9D;
@@ -23,7 +31,7 @@
   cursor: pointer;
 }
 .navbar-dropdown-text{
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 .navbar-dropdown-link{
   text-decoration: none;
