--- a/src/styles/AllProduct.css
+++ b/src/styles/AllProduct.css
@@ -34,7 +34,7 @@
     padding: 0 0 5% 10%;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
-
+    font-size: 1.2vw;
 }
 
 .all-product-item button{
@@ -55,3 +55,17 @@
     background-color: #1d74cc;
     border: 3px solid #1d74cc;
 }
+.all-star-rating-container{
+    margin-left: 10%;
+    margin-bottom: 4%;
+    background-color:#55c3bd !important;
+    color: white;
+    width: fit-content;
+    font-size: 1vw !important;
+    padding: 0.4vw 0.8vw!important;
+    border-radius: 10px;
+}
+.all-star-rating-container span{
+    padding-left: 0.4vw;
+}
+
