--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -13,13 +13,13 @@
   color: #165A9D;
   font-weight:bold;
   text-transform:uppercase;
-  font-size: 1.5vw;
+  font-size: 30px;
 }
 .home-container-label span{
   text-decoration:underline;
   text-decoration-color: #55c3bd;
-  text-decoration-thickness: 0.3vw;
-  text-underline-offset: 0.7vw;
+  text-decoration-thickness: 8px;
+  text-underline-offset: 10px;
 }
 .new-products-container{
   padding: 1% 0% 1% 4%;
@@ -36,4 +36,18 @@
   grid-template-rows: repeat(6, 1fr); 
   grid-column-gap: 20px;
   grid-row-gap: 20px; 
+}
+
+@media only screen and (max-width: 1100px) {
+  .all-products-container {
+    grid-template-columns: repeat(2, 1fr); 
+    grid-template-rows: repeat(9, 1fr); 
+  }
+  .home-container-label {
+    font-size: 20px;
+  }
+  .home-container-label span{
+    text-decoration-thickness: 4px;
+    text-underline-offset: 5px;
+  }
 }
